# Task_manager_Esmerald

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  et --hard comienzo de arreglar la ui para moviles  et --hard comienzo de arreglar la ui para moviles  package-lock.json  package.json
.github/prompts/ui-ux-pro-max/: PROMPT.md
backend/: .env  .env.example  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  test_sqlite.py
backend/boards/: admin.py  consumers.py  models.py  permissions.py  routing.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/boards/migrations/: 0001_initial.py  0002_alter_board_options.py  0003_alter_board_options_board_last_activity.py
backend/boards/serializers/: board_serializers.py  team_serializers.py
backend/boards/services/: content_service.py  team_service.py  websocket_service.py
backend/boards/test/: test-consumers.py  test-services.py  test-views.py
backend/boards/tests/: test_content_service.py  test_models.py  test_selectors.py  test_serializers.py  test_team_service.py  test_views.py
backend/boards/views/: board_views.py  team_views.py
backend/chat/: consumers.py  models.py  routing.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/tests/: test_models.py  test_services.py  test_views.py
backend/config/: asgi.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/core/: middleware.py  selectors.py  urls.py  validators.py
backend/core/middleware/: jwt_auth.py
backend/core/serializers/: auth_serializers.py  registration.py  user_serializers.py
backend/core/services/: auth.py  auth_service.py  user_service.py
backend/core/tests/: test_selectors.py  test_services.py  test_views.py
backend/core/urls/: urls_auth.py  urls_users.py
backend/core/views/: auth.py  auth_views.py  user_views.py
docs/: TECHNICAL_AUDIT.md
frontend-collaborativa/: .env.cloudflare  .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend-collaborativa/src/: App.tsx  env.d.ts  index.css  main.tsx  vite-env.d.ts
frontend-collaborativa/src/api/: http.service.ts  queryClient.ts
frontend-collaborativa/src/app/: providers.tsx  queryClient.ts  router.tsx
frontend-collaborativa/src/hooks/: useSocketSync.ts
frontend-collaborativa/src/services/: api.constants.ts  board.service.ts  endpoints.ts  events.ts  events.types.ts  http.service.ts  index.ts  socketHandler.ts  (+3 more)
(+124 files in other folders)
